# rapidocr-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_quick.py
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
src/rapidocr_mcp/: __init__.py  __main__.py  config.py
src/rapidocr_mcp/core/: ocr_service.py
src/rapidocr_mcp/engines/: registry.py
src/rapidocr_mcp/mcp/: server.py
src/rapidocr_mcp/monitoring/: metrics.py  tracing.py
src/rapidocr_mcp/security/: auth.py
src/rapidocr_mcp/server/: fastapi_server.py
src/rapidocr_mcp/utils/: image.py  output_formatter.py  rate_limit.py  url_downloader.py
tests/: test_formatters.py  test_image.py  test_ocr_service.py
